src/dashboard/sideBar/sideBar.css
:root{
  --sidebar-font-size: 14px;
  --sidebar-icon-main-size: 16px;
  --sidebar-icon-size: 16px;
  --sidebar-items-color: #686B74;
  
}


  /* <SIDEBAR */
.open{
    left: 200px;
    width: calc(100vw - 220px);
    transition: all 0.4s ease;
  } 
   

  
  .sidebar--open {
    width: 200px;
    background-color: transparent;
    padding: 32.5px 15px;
    position: fixed;
    left: 0;
    top: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    transition: all 0.4s ease;
    white-space: nowrap;
  }
  .sidebar{
    width: 50px;
    background-color: transparent;
    padding: 32.5px 15px;
    position: fixed;
    left: 0;
    top: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: start;
    transition: all 0.4s ease;
    justify-content: space-between;
    z-index: 1;
    
  }
  .sidebar__container{
    width: 40px;
    background-color: transparent;
    padding: 72.5px 0px 22.5px 8px;
    position: fixed;
    left: 0;
    top: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
    transition: width 0.4s ease;
    animation: sidebarHide 0.4s ease forwards;
    white-space: nowrap;
    overflow: hidden;
  }
   
  @keyframes sidebarHide {
    0% {
      width: 200px;
      
     
    }
    30% {
      width: 90px;
   
    }
    100% {
      width: 40px;
  
    }
  }
  
  @keyframes sidebarShow {
    0% {
      width: 40px;
    
    }
    30% {
      width: 90px;
      
    }
    100% {
      width: 200px;
     
    }
  }  
  .sidebar__container--open{
    width: 250px;
    background-color: transparent;
    padding: 72.5px 8px 22.5px 8px;
    position: fixed;
    left: 0;
    top: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
    transition: width 0.4s ease;
    background-color: transparent;
    animation: sidebarShow 0.4s ease forwards;
    white-space: nowrap;
    justify-content: space-between;
    ;
  }
  .sidebar__logos{
    display: flex;
    flex-direction: row;
    justify-content: end;
  }
  .sidebar__logos--open{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    z-index: 1;
    padding: 0px 0px 0px 0px;
  }
  .sidebar__logo{
    display: none;
  }
  .sidebar__logo--open{
    display: flex;
  }
  
  .sidebar__action {
    cursor: pointer;
    transition: all 0.4s ease;
    z-index: 1;
    
    
  }

  .sidebar__action__desk{
    display: block;
    transition: all 0.3s ease;
    width: var(--icon-size);
    height: var(--icon-size);
  }
  .sidebar__action__mobile{
    display: none;
    transition: all 0.3s ease;
    width: var(--icon-size);
    height: var(--icon-size);
  }
  
  .sidebar__upper {
    display: flex;
    flex-direction: column;
  }
  .sidebar__home{
    border-bottom: 1px solid var(--border-color);
    border-top: 1px solid var(--border-color);
    
  }
  .sidebar__header{
    padding: 8px;
    text-decoration: none;
    margin-bottom: 0.5rem;
    display: flex;
    overflow: hidden;
    gap: 12px;
    white-space: nowrap;
    align-items: center;
    color: var(--sidebar-items-color);
        
  }
  .sidebar__header__icon{
    background-color: var(--background-color-blue);
    padding: 4px;
    border-radius: 20%;
  }
  .sidebar__header__svg{
    width: var(--icon-size);
    height: var(--icon-size);
  }
  .sidebar__docs__icon{
    background-color: var(--background-color-black);
    padding: 4px;
    border-radius: 20%;
  }
  .sidebar__docs__svg{
    width: var(--icon-size);
    height: var(--icon-size);
  }
  .sidebar__header__icon,
  .sidebar__docs__icon {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 18px;
    height: 18px;
  }
  .sidebar__header__text{
    font-size: var(--sidebar-font-size);
    font-weight: var(--font-weight);
    font-family: var(--font-family);
    color: var(--sidebar-items-color);
    letter-spacing: var(--letter-spacing);
  
  }
  .sidebar__lower {
    display: flex;
    flex-direction: column;
    margin-top: auto;
    gap: 40px;
  }
  
  .sidebar:hover .sidebar__link{
    overflow: visible;
  }
  
  .sidebar__link {
    text-decoration: none;
    margin-bottom: 0.5rem;
    text-decoration: none;
    color: var(--sidebar-items-color);
    font-size: var(--sidebar-font-size);
    font-weight: var(--font-weight);
    letter-spacing: var(--letter-spacing);
    font-family: var(--font-family);
    display: flex;
    overflow: hidden;
    gap: 12px;
    white-space: nowrap;
    align-items: center;
    padding: 8px;
    border: 1px solid transparent;
  }
  
  .sidebar__link:hover {
    background-color: #fff;
    border-radius: 12px;
    border: 1px solid #E0E0E0;
  }
  
 
  .sidebar__link__svg{
    width: var(--sidebar-icon-size);
    height: var(--sidebar-icon-size);
    display: flex;
    align-items: center;
    justify-content: center;
  }
  
  .sidebar__user-avatar {
    border-radius: 50%;
    width: 25px;
    height: 25px;
  }
  
 /*  .dark-icon {
    display: none;
  }
  
  .logo-container{
    display: flex;
    justify-content: start;
    align-items: center;
    padding: 32px 12px;
    height: 25px;
    border-bottom: 1px solid #00000015;
    cursor: pointer;
  }
  .logo-container__logo{
    width: 20px;
    
  
  } */
  /* >SIDEBAR */

    
@media (max-width: 767px) {
    
  .open{
       left: 0px;
       width: 100%;
    } 


  .sidebar__action__desk{
    display: none;
  }
  .sidebar__action__mobile{
    display: flex;
  }

  .sidebar--open {
    width: 100vw;
    background-color: #fff;
    height: 0px;
    padding: 15px 20px;
    position: relative;
    left: -5px;
    top: 0;
    display: flex;
    flex-direction: column;
    transition: all 1s ease; 
    white-space: nowrap;
    gap: 15px;
   
}
.sidebar{
    width: 100vw;
    background-color: #fff;
    padding: 15px 20px;
    position: relative;
    left: -5px;
    top: 0;
    height: 0px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    transition: all 1s ease; 
    white-space: nowrap;
}
.sidebar__container{
    width: 100%;
    background-color: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(20px);
    padding: 5px 20px;
    position: absolute;
    left: 0;
    top: 0;
    display: flex;
    flex-direction: column;
    transition: all .5s ease; 
    
    white-space: nowrap;
    z-index: 1;
    border: 1px solid #E0E0E0;
    border-radius: 10px;
    justify-content: end;
    gap: 7.5px;
    height: 300px;
    
}

@keyframes sidebarHide {
    0% {
      height: 570px;
      display: flex;
    }
    30% {
      height: 200px;
      display: flex;
    }
    100% {
      height: 0px;
      display: none;
    }
   
}

@keyframes sidebarShow {
    0% {
      height: 0px;
      display: none;
    }
    30% {
      height: 0px;
      display: flex;
    }
    100% {
      height: 570px;
      display: flex;
    }
} 
.sidebar__container--open{
    width: 100%;
    background-color: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(20px);
    padding: 5px 10px;
    position: relative;
    left: 0;
    top: 0;
    display: flex;
    flex-direction: column;
    transition: all .5s ease; 
    animation: sidebarShow 0.4s ease forwards;
    white-space: nowrap;
    z-index: 1;
    border: 1px solid #E0E0E0;
    border-radius: 10px;
    justify-content: end;
    gap: 7.5px;
    
}
.logo-container{
    width: 100%;
}
.sidebar__upper {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.sidebar__home{
    border-top: 0px;
}
.sidebar__lower {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%; 
    gap: 20px;
}
.sidebar__logos{
    display: flex;
    justify-content: space-between;
    padding: 0px 15px;
    
    
}
.sidebar__logos--open{
    z-index: 2;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    position: relative;
    align-items: center;
    padding: 0px 15px;
  
}
.sidebar__logo {
    display: flex;
    justify-content: start;
    align-items: center;

}
.sidebar__logo--open{
    display: flex;
    justify-content: start;
    align-items: center;
}
}

